...
        Text(
            "From $logName",
            style = MaterialTheme.typography.titleSmall,
            color = Color.LightGray,
            maxLines = 1,
            overflow = TextOverflow.Ellipsis,
            modifier = Modifier.testTag("PRIORITY_LOG_TITLE")
        )
    }
}


@Composable
...
            Image(
                painter = painter,
                contentDescription = null,
                contentScale = ContentScale.Crop,
                modifier = Modifier
                    .fillMaxSize()
                    .testTag("MOVIE_IMAGE")
            )
        }
    }
}

@Composable
...
                    text = title ?: "", style = MaterialTheme.typography.headlineMedium,
                    maxLines = 1,
                    modifier = Modifier
                        .basicMarquee(
                            iterations = Int.MAX_VALUE
                        )
                        .testTag("MOVIE_TITLE")
                )
            }

            Row {
                Column {
                    usRating?.ifEmpty { "Not Rated" }?.let {
...
                // Release Date
                Column {
                    Text(
                        text = releaseDate?.substring(0, 4) ?: "",
                        style = MaterialTheme.typography.bodySmall,
                        color = Color.LightGray,
                        modifier = Modifier.testTag("MOVIE_YEAR")
                    )
                }
            }
        }

        // Complete button
...
            Image(
                painter = painterResource(id = R.drawable.checkbutton2),
                contentDescription = "Check icon",
                modifier = Modifier
                    .size(40.dp)
                    .scale(scaleFactor)
                    .testTag("CHECK_ICON")
                    .clickable {
                        haptic.performHapticFeedback(HapticFeedbackType.LongPress)
                        Toast
                            .makeText(
                                context,
                                "Successfully marked movie as watched!",
...
                .weight(1f)
                .fillMaxHeight()
        ) {
            Text(
                "My Logs",
                style = MaterialTheme.typography.headlineMedium,
                modifier = Modifier.testTag("MY_LOGS_HEADER")
            )
        }

        // Add Log Button
        Column(
            modifier = Modifier
...
                        isSheetOpen = true
                        CoroutineScope(Dispatchers.Main).launch {
                            delay(100) // Delay in milliseconds to simulate the click effect
                            isClicked = false
                        }
                    }
                    .testTag("ADD_LOG_BUTTON"),
                colorFilter = tint(color = colorResource(id = R.color.sky_blue))
            )
        }
    }

    // New Log Menu
...
        ModalBottomSheet(
            sheetState = sheetState,
            onDismissRequest = { isSheetOpen = false },
            containerColor = colorResource(id = R.color.bottomnav),
            modifier = Modifier
                .fillMaxSize()
                .testTag("ADD_LOG_POPUP")
        ) {
            NewLogMenu(friendsViewModel = friendsViewModel, logViewModel, isLoggedIn, onCreateClick = {
                    isSheetOpen = false
                    logViewModel.loadLogs()
            }, onCloseClick = {
                isSheetOpen = false
...
                        friend.avatarPreset ?: 1
                    ).second
                ),
                contentDescription = null,
                modifier = Modifier
                    .size(60.dp)
                    .testTag("NEW_LOG_COLLABORATOR_AVATAR"),
            )
        }

        // Username
        Column(
            modifier = Modifier
...
                .height(60.dp),
            verticalArrangement = Arrangement.Center
        ) {
            Text(
                friend.username ?: "",
                style = MaterialTheme.typography.bodyLarge,
                modifier = Modifier.testTag("NEW_LOG_COLLABORATOR_USERNAME")
            )
        }

        if (currentCollab) {
            // Minus Button
            Column(
...
                    .height(60.dp)
                    .clickable {
                        if (collaboratorsList.contains(friend.userId)) {
                            collaboratorsList.remove(friend.userId)
                        }
                    }
                    .testTag("REMOVE_COLLABORATOR_BUTTON"),
                horizontalAlignment = Alignment.CenterHorizontally,
                verticalArrangement = Arrangement.Center
            ) {
                Image(
                    imageVector = Icons.Default.RemoveCircle,
                    contentDescription = "Add Icon",
                    colorFilter = tint(color = Color.Red),
                    modifier = Modifier
                        .size(30.dp)
                        .testTag("REMOVE_COLLABORATOR_ICON")
                )
            }
        } else {
            // Add Button
            Column(
                modifier = Modifier
...
                    .clickable {
                        if (!collaboratorsList.contains(friend.userId)) {
                            collaboratorsList.add(friend.userId)
                        }

                    }
                    .testTag("ADD_COLLABORATOR_BUTTON"),
                horizontalAlignment = Alignment.CenterHorizontally,
                verticalArrangement = Arrangement.Center
            ) {
                Image(
                    painter = painterResource(id = R.drawable.add),
                    contentDescription = "Add Icon",
                    modifier = Modifier
                        .size(25.dp)
                        .testTag("ADD_COLLABORATOR_ICON")
                )
            }
        }
    }
}

...
